--- a/Alyas.Feature.CloudinaryConnect/App_Config/Include/Feature/CloudinaryConnect/Alyas.Feature.CloudinaryConnect.config
+++ b/Alyas.Feature.CloudinaryConnect/App_Config/Include/Feature/CloudinaryConnect/Alyas.Feature.CloudinaryConnect.config
@@ -14,13 +14,13 @@
       </mediaProvider>
     </mediaLibrary>
     <settings>
-      <setting name="Connect.Cloudinary.BaseUrl" value="https://res.cloudinary.com"/>
-      <setting name="Connect.Cloudinary.Cloud" value=""/>
-      <setting name="Connect.Cloudinary.ApiKey" value=""/>
-      <setting name="Connect.Cloudinary.ApiSecret" value=""/>
-      <setting name="Connect.Cloudinary.IsResponsive" value="true"/>
-      <setting name="Connect.Cloudinary.FormatAuto" value="true"/>
-      <setting name="Connect.Cloudinary.QualityAuto" value="true"/>
+      <setting name="Alyas.Connect.Cloudinary.BaseUrl" value="https://res.cloudinary.com"/>
+      <setting name="Alyas.Connect.Cloudinary.Cloud" value="[Your Cloudinary Cloud Name]"/>
+      <setting name="Alyas.Connect.Cloudinary.ApiKey" value="[Your Cloudinary Api Key]"/>
+      <setting name="Alyas.Connect.Cloudinary.ApiSecret" value="[Your Cloudinary Api Secret]"/>
+      <setting name="Alyas.Connect.Cloudinary.IsResponsive" value="true"/>
+      <setting name="Alyas.Connect.Cloudinary.FormatAuto" value="true"/>
+      <setting name="Alyas.Connect.Cloudinary.QualityAuto" value="true"/>
     </settings>
   </sitecore>
 </configuration>
